--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ sass:
 permalink: /posts/:title/
 texture:
   title: Adam Denisov
-  tagline: Developer. Designer
+  tagline: test
   date_format: "%b %-d, %Y"
   style: black
   showNav: false
