--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,6 @@ description: > # this means to ignore newlines until "show_exerpts:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 show_excerpts: true # set to true to show excerpts on the homepage
-baseurl: /texture
 
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
@@ -17,7 +16,7 @@ sass:
 permalink: /posts/:title/
 texture:
   title: Adam Denisov
-  tagline: test
+  tagline: test2
   date_format: "%b %-d, %Y"
   style: black
   showNav: false
