--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ texture:
   # generate social links in footer
   social_links:
     twitter: dereksgc
+    reddit: derekcz
  
 
 # If you want to link only specific pages in your header, uncomment
