--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author: Derek
 email: 
 description: > # this means to ignore newlines until "show_exerpts:"
   description goes here
-show_excerpts: true # set to true to show excerpts on the homepage
+show_excerpts: false # set to true to show excerpts on the homepage
 
 # Minima date format
 # refer to http://shopify.github.io/liquid/filters/date/ if you want to customize this
